fix div overlapping bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,16 +83,21 @@
 
 .nav{
     margin-left: 15px;
+    width: 100%;
 }
 
- .nav ul{
+
+
+ .nav-ul{
+     display: flex;
      margin: 0;
      padding: 0;
      overflow: hidden;
      list-style-type: none;
      border-bottom: 1px solid #b4b4b4;
-     
+     width: 100%;
  }
+
 
  .nav li {
      float: left;
@@ -102,10 +107,39 @@
       text-decoration: none;
       display: block;
       padding: 14px 16px;
-      font-size: 16px;
+      font-size: 13px;
       color: rgb(58, 58, 56);
 
   }
+
+
+  @media only screen and (max-width: 900px) {
+      .nav-ul{
+          display: none;
+      }
+  }
+
+  /* Large devices (laptops/desktops, 992px and up)
+@media only screen and (min-width: 992px) {
+    .nav a {
+        font-size: 16px;
+    }
+} */
+
+/* Medium devices (landscape tablets, 768px and up) */
+/* @media only screen and (min-width: 768px) {
+    .nav a {
+        font-size: 14px;
+    }
+} */
+
+/* Extra small devices (phones, 600px and down) */
+/* @media only screen and (max-width: 600px) {
+    .example {
+        font-size: 12px;
+    }
+} */
+
 
   .nav li::after {
         
@@ -128,13 +162,14 @@
       bottom: 0;
       right: 0;
       left: 0;
-      background-color: #0000001A;
+      background-color: #00000034;
   }
 
   .modal-child {
       position: absolute;
       top: 50%;
       left: 50%;
+      width: 384px;
       background-color:rgb(251, 253, 247);
       transform: translate(-50%, -50%);
       padding-left: 18px;
@@ -142,7 +177,14 @@
       padding-bottom: 25px;
       border-radius: 10%;
       border: 0.5px solid rgb(88, 88, 88);
+      /* display: flex;
+      justify-content: center; */
 
+  }
+
+  .user-form-parent{
+    display: flex;
+    justify-content: center; 
   }
 
   .close-x {
@@ -156,9 +198,11 @@
   .user-form{
       padding-top: 0;
       margin-bottom: 20px;
-      display: inline-block;
-      margin-left: auto;
-      margin-right: auto;
+      /* display: flex; */
+      width: 159px;
+      justify-content:center;
+      /* margin-left: auto;
+      margin-right: auto; */
 
 
   }
@@ -177,7 +221,7 @@
   }
 
 .current-next-session{
-    margin-left: 0;
+    margin-left: 175px;
     display: flex;
    align-items: center;
     }
@@ -188,6 +232,7 @@
     font-family: Graphik Webfont;
 
 }
+
 
 .form-next {
     float: right;
@@ -277,3 +322,5 @@ cursor: pointer;
     padding: 0;
 
 }
+
+
